Mirror from GitLab 0.6.0

--- a/SourceQueueServerSink/GUI/GUI.csproj
+++ b/SourceQueueServerSink/GUI/GUI.csproj
@@ -1,29 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Ers" Version="0.6.0" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SourceQueueServerSink\SourceQueueServerSink.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Assets\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="ErsWinForms" Version="0.4.0" />
-  </ItemGroup>
-
   <ItemGroup>
     <None Update="Assets\Tote_Top_White.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
 </Project>
